# Proyecto_AA1

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
jupyter_notebooks/: DesTallerFinal_3.ipynb  DesTallerFinal_3_v1.ipynb  EDA_regresionLineal.ipynb  taller_final.ipynb
jupyter_notebooks/.ipynb_checkpoints/: EDA_regresionLineal-checkpoint.ipynb
mlruns/0/: meta.yaml
