[project]
name = "taller-final-aa1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "category-encoders>=2.8.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "path>=17.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
